keymap: Treat ALT as META

https://bugzilla.gnome.org/show_bug.cgi?id=663779